; ModuleID = '/home/carl/AnghaBench/libgit2/tests/core/extr_errors.c_test_core_errors__restore.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/core/extr_errors.c_test_core_errors__restore.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_7__ = type { i32, i32 }

@.str = private unnamed_addr constant [8 x i8] c"Foo: %s\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"bar\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"Bar: %s\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"foo\00", align 1
@.str.4 = private unnamed_addr constant [9 x i8] c"Foo: bar\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_core_errors__restore() #0 {
  %1 = alloca %struct.TYPE_6__, align 4
  %2 = bitcast %struct.TYPE_6__* %1 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %2, i8 0, i64 4, i1 false)
  %3 = call i32 (...) @git_error_clear()
  %4 = call %struct.TYPE_7__* (...) @git_error_last()
  %5 = icmp eq %struct.TYPE_7__* %4, null
  %6 = zext i1 %5 to i32
  %7 = call i32 @cl_assert(i32 %6)
  %8 = call i32 @git_error_state_capture(%struct.TYPE_6__* %1, i32 0)
  %9 = call i32 @cl_assert_equal_i(i32 0, i32 %8)
  %10 = call i32 @memset(%struct.TYPE_6__* %1, i32 0, i32 4)
  %11 = call i32 @git_error_set(i32 42, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %12 = call i32 @git_error_state_capture(%struct.TYPE_6__* %1, i32 -1)
  %13 = call i32 @cl_assert_equal_i(i32 -1, i32 %12)
  %14 = call %struct.TYPE_7__* (...) @git_error_last()
  %15 = icmp eq %struct.TYPE_7__* %14, null
  %16 = zext i1 %15 to i32
  %17 = call i32 @cl_assert(i32 %16)
  %18 = call i32 @git_error_set(i32 99, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0))
  %19 = call i32 @git_error_state_restore(%struct.TYPE_6__* %1)
  %20 = call %struct.TYPE_7__* (...) @git_error_last()
  %21 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @cl_assert_equal_i(i32 42, i32 %22)
  %24 = call %struct.TYPE_7__* (...) @git_error_last()
  %25 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @cl_assert_equal_s(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.4, i64 0, i64 0), i32 %26)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @git_error_clear(...) #2

declare dso_local i32 @cl_assert(i32) #2

declare dso_local %struct.TYPE_7__* @git_error_last(...) #2

declare dso_local i32 @cl_assert_equal_i(i32, i32) #2

declare dso_local i32 @git_error_state_capture(%struct.TYPE_6__*, i32) #2

declare dso_local i32 @memset(%struct.TYPE_6__*, i32, i32) #2

declare dso_local i32 @git_error_set(i32, i8*, i8*) #2

declare dso_local i32 @git_error_state_restore(%struct.TYPE_6__*) #2

declare dso_local i32 @cl_assert_equal_s(i8*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
